# FloriaGameFrameworkR7

./: .gitignore  README.md  pyproject.toml  requirements.txt
FloriaGF/: AsyncEvent.py  Avg.py  Computed.py  Config.py  Convert.py  Core.py  Exceptions.py  Flag.py  InstanceAttributeManager.py  InterpolationField.py  Loggers.py  PerSecond.py  PeriodicTrigger.py  Stopwatch.py  TimeoutScheduler.py  Timer.py  Utils.py  Validator.py  __init__.py
FloriaGF/Abc/: Core.py  __init__.py
FloriaGF/Abc/Graphic/: Camera.py  Mesh.py  __init__.py
FloriaGF/Abc/Managers/: Manager.py
FloriaGF/Abc/Mixins/: Binding.py  Copyable.py  Disposable.py  DrawRender.py  ID.py  Nameable.py  Repr.py  Serializable.py  Signaturable.py  Simulatable.py  __init__.py
FloriaGF/Assets/: Asset.py  Image.py  Json.py  Text.py  __init__.py
FloriaGF/Extensions/ECSExt/: Loggers.py  __init__.py
FloriaGF/Extensions/GraphicExt/: Global.py  __init__.py
FloriaGF/Extensions/TranslationExt/: LanguageManager.py  __init__.py
FloriaGF/GL/: Binding.py  Common.py  Convert.py  Draw.py  Logger.py  State.py  __init__.py  hints.py
FloriaGF/GL/Buffer/: Common.py  __init__.py
FloriaGF/GL/Framebuffer/: Common.py  __init__.py
FloriaGF/GL/Renderbuffer/: Common.py  __init__.py
FloriaGF/GL/Shader/: Common.py  __init__.py
FloriaGF/GL/ShaderProgram/: Common.py  __init__.py
FloriaGF/Graphic/: Camera.py  Mesh.py  __init__.py
FloriaGF/Managers/: AssetManager.py  BatchObjectManager.py  ClassManager.py  InputManager.py  Manager.py  MaterialManager.py  MeshManager.py  ShaderManager.py  WindowManager.py  __init__.py
FloriaGF/Protocols/: Functions.py  ID.py  Named.py  __init__.py
FloriaGF/Sequences/: AssetSequence.py  IDSequence.py  InstanceObjectSequence.py  MaterialManager.py  MeshSequence.py  NameSequence.py  Sequence.py  ShaderSequence.py  TypeSequence.py  WindowSequence.py  __init__.py
FloriaGF/Types/: Angle.py  Color.py  Direction.py  JSON.py  Quaternion.py  Vec.py  __init__.py  hints.py
(+70 files in other folders)
