[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "FloriaGameFrameworkR7"
version = "0.0.1"
description = "Экспериментальный самописный игровой фреймворк."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "FloriaProduction", email = "FloriaProduction@yandex.ru"}
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "PyOpenGL==3.1.10",
    "glfw==2.10.0",
    "numpy==2.3.4",
    "pyrr==0.10.3",
    "PILLOW==12.0.0",
    "aiofiles==25.1.0",
]
keywords = [
    "game",
    "framework",
    "opengl",
    "async",
    "2d",
    "3d",
    "graphics",
    "ecs",
    "entity-component-system"
]
classifiers = [
    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Games/Entertainment",
    
    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",

    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]


[project.urls]
Repository = "https://github.com/FloriaProduction/FloriaGameFrameworkR7"


[project.optional-dependencies]
dev = [
    "black>=25.12.0",
]


[tool.black]
line-length = 130
target-version = ['py314']
skip-string-normalization = true


[tool.setuptools]
include-package-data = true
platforms = ["Windows"]


[tool.setuptools.packages.find]
where = ["."]
include = ["FloriaGF*"]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "*.vsh",
    "*.fsh", 
    "*.txt", 
    "*.json", 
    "*.md", 
    "*.png", 
    "*.jpg", 
    "*.jpeg",
    "*.gif",
]